Fix homepage for gh-pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tigermenusreact",
-  "homepage": "https://github.com/davidpwu/tigermenusreact",
+  "homepage": "https://davidpwu.github.io/tigermenusreact",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
